--- a/style.css
+++ b/style.css
@@ -414,9 +414,7 @@ footer > h1 {
 
 @media screen and (max-width: 768px) {
 
-    * {
-        max-width: 426px;
-    }
+
 
 
     .navlist {
@@ -695,5 +693,10 @@ footer > h1 {
         border-radius: 2rem;
         margin-top: 2rem;
     }
+    
+    html {
+        max-width: 426px;
+    }
+    
 }
 
